v0.6/guides/database/models.mdx
---
title: "Models"
description: "Define type-safe database models with BaseModel and the Objection query builder."
icon: "table"
---

Models map application data to database tables. Every model extends `BaseModel`,
which builds on [Objection.js](https://vincit.github.io/objection.js/) and layers
soft deletes and automatic timestamps on top of the standard query builder. This
page covers defining a model and everything `BaseModel` adds to Objection.

## Defining a model

Generate a model with the `ace` CLI:

```bash
bun ace make:model UserModel
```

```ts app/models/UserModel.ts
import type {Timestamp, NullableTimestamp} from "@bejibun/core/bases/BaseModel";
import BaseModel from "@bejibun/core/bases/BaseModel";

export default class UserModel extends BaseModel {
    public static tableName: string = "users";
    public static idColumn: string = "id";

    declare id: bigint;
    declare name: string;
    declare email: string;
    declare created_at: Timestamp;
    declare updated_at: Timestamp;
    declare deleted_at: NullableTimestamp;
}
```

`BaseModel` is also available as a named export from the package root:
`import {BaseModel} from "@bejibun/core";`.

## Conventions

| Static property | Default        | Purpose                                 |
| --------------- | -------------- | --------------------------------------- |
| `tableName`     | --             | The table this model maps to (required) |
| `idColumn`      | --             | Primary key column (typically `"id"`)   |
| `createdColumn` | `"created_at"` | Created-at timestamp column             |
| `updatedColumn` | `"updated_at"` | Updated-at timestamp column             |
| `deletedColumn` | `"deleted_at"` | Soft-delete timestamp column            |

`Timestamp` accepts a `Luxon.DateTime`, `Date`, or `string`; `NullableTimestamp`
adds `null` for rows that have not been soft-deleted. Both types are exported
from `@bejibun/core/bases/BaseModel`.

<Tip>
    As of v0.6.0, the `EpochTimestamps` mixin is exported from the package root:
    `import {EpochTimestamps} from "@bejibun/core";`. It stamps
    `createdColumn`/`updatedColumn` with Unix epoch integers instead of
    `DateTime` objects, which is useful for integer timestamp columns such as
    those in the built-in `jobs` table (see `JobModel`).
</Tip>

## Automatic timestamps

`BaseModel` stamps timestamps for you:

- On **insert**, it sets `created_at` and `updated_at` to the current time.
- On **update**, it refreshes `updated_at`.
- On **delete**, the soft-delete mechanism sets `deleted_at` to the current
  time.

The hooks only stamp a column when it already has a value set on the instance,
so you never assign these columns by hand.

## Fluent query helpers

`BaseModel` adds short static helpers that wrap `query()`:

| Helper                       | Equivalent                        | Returns                          |
| ---------------------------- | --------------------------------- | -------------------------------- |
| `all(trx?)`                  | `query().select()`                | all rows (query builder)         |
| `find(id, trx?)`             | `query().findById(id)`            | matching row, or `undefined`     |
| `findOrFail(id, trx?)`       | `query().findById(id)` + throw   | `Promise<InstanceType<T>>`       |
| `create(payload, trx?)`      | `query().insert(payload)`         | inserted row (query builder)     |
| `query(trx?)`                | --                                | soft-delete-aware query builder  |
| `withTrashed(trx?)`          | `query().withTrashed()`           | query including soft-deleted rows|

`findOrFail` throws `ModelNotFoundException` when no row matches; `find` returns
`undefined` instead.

```ts
await UserModel.all();                                  // all non-deleted users
await UserModel.find(1);                                // user 1, or undefined
const user = await UserModel.findOrFail(1);             // throws if missing
await UserModel.create({name: "Jane", email: "jane@x.io"});
```

<Note>
    `query()`, `all()`, `find()`, and `create()` return Objection query
    builders, so they resolve when `await`ed or chained with further methods.
    `findOrFail` is the one helper that returns a plain `Promise`.
</Note>

The soft-delete-aware helpers `withTrashed()` and `onlyTrashed()` scope the
result set, while `restore()` and `forceDelete()` operate on the matched rows:

```ts
await UserModel.withTrashed().where("email", "like", "%@x.io");  // include deleted
await UserModel.onlyTrashed();                                    // deleted rows only
await UserModel.onlyTrashed().restore();                          // undelete
await UserModel.forceDelete().where("id", 5);                     // real DELETE
```

See [Soft Deletes](/v0.6/guides/database/soft-deletes) for the full behavior.

## Input validation with `jsonSchema`

A static `jsonSchema` getter validates model data on every insert or patch; a
failed check rejects with Objection's `ValidationError`. It is a standard JSON
Schema for **input only**, so no tables or columns are generated from it.
Object and array properties are automatically serialized to JSON on write and
parsed back on read.

```ts app/models/UserModel.ts
static get jsonSchema() {
    return {
        type: "object",
        required: ["name", "email"],        // ignored on patch (partial updates)
        properties: {
            id: {
                type: "integer"
            },
            name: {
                type: "string",
                minLength: 1,
                maxLength: 255
            },
            email: {
                type: "string",
                minLength: 1,
                maxLength: 255
            },
            age: {
                type: ["integer", "null"]
            },                              // nullable column
            address: {                      // object -> JSON string in DB
                type: "object",
                properties: {
                    street: {
                        type: "string"
                    },
                    city: {
                        type: "string"
                    }
                }
            }
        }
    };
}
```

<Note>
    `raw` expressions, subqueries, and field expressions in the update object
    are **not** validated.
</Note>

## Relationships

Declare relations in a static `relationMappings` getter, where each entry sets
the relation type, the related `modelClass`, and the `join` columns. Import the
related model inside the getter to avoid circular imports at module load time.

| Relation               | Use for                                                 |
| ---------------------- | ------------------------------------------------------- |
| `BelongsToOneRelation` | This model holds the foreign key (e.g. `posts.user_id`) |
| `HasManyRelation`      | The related model holds the foreign key (one-to-many)   |
| `HasOneRelation`       | Like `HasMany` but a single related row (one-to-one)    |
| `ManyToManyRelation`   | Rows joined through a pivot/join table                  |

```ts app/models/UserModel.ts
import BaseModel from "@bejibun/core/bases/BaseModel";
import PostModel from "@/app/models/PostModel";
import ProfileModel from "@/app/models/ProfileModel";
import RoleModel from "@/app/models/RoleModel";
import UserModel from "@/app/models/UserModel";

static get relationMappings() {
    return {
        // one-to-many: posts.user_id -> users.id
        posts: {
            relation: BaseModel.HasManyRelation,
            modelClass: PostModel,
            join: {
                from: "users.id",
                to: "posts.user_id"
            }
        },

        // one-to-one: profiles.user_id -> users.id
        profile: {
            relation: BaseModel.HasOneRelation,
            modelClass: ProfileModel,
            join: {
                from: "users.id",
                to: "profiles.user_id"
            }
        },

        // many-to-many through a join table
        roles: {
            relation: BaseModel.ManyToManyRelation,
            modelClass: RoleModel,
            join: {
                from: "users.id",
                through: {
                    from: "role_user.user_id",
                    to: "role_user.role_id"
                },
                to: "roles.id"
            }
        },

        // inverse: this model holds the FK
        author: {
            relation: BaseModel.BelongsToOneRelation,
            modelClass: UserModel,
            join: {
                from: "posts.user_id",
                to: "users.id"
            }
        }
    };
}
```

## Eager loading

Load relations with a relation expression. `withGraphFetched` runs separate
queries (the common choice); `withGraphJoined` uses SQL joins so you can filter
or order by related columns from the root query.

```ts
UserModel.query().withGraphFetched("[posts.comments, profile]")   // nested, separate queries
UserModel.query().withGraphFetched("posts(published)")            // apply a modifier (see below)
UserModel.query()
    .withGraphJoined("posts")                                     // single joined query...
    .where("posts.published", true)                               // ...so you can filter/order
    .orderBy("posts.created_at", "desc")                          //    on the related table
```

## Relation queries

Query a relation without eager loading. Static `relatedQuery(name).for(ids)`
targets one or more parents; instance `$relatedQuery(name)` targets a loaded
model. Both return a full query builder, so you can insert, patch, or delete
through the relation, with foreign keys set for you.

```ts
UserModel.relatedQuery("posts").for([1, 2])                       // posts of users 1 and 2
user.$relatedQuery("posts").where("published", true)              // posts of a loaded user
UserModel.relatedQuery("posts").for(1).insert({title: "Hello"})   // insert related row
```

## Query-builder CRUD

`Model.query()` returns the full Objection/Knex query builder.

```ts
// read
UserModel.query().findById(1)
UserModel.query().where("name", "like", "A%").orderBy("created_at", "desc")

// create -- returns given props + id only (no extra SELECT)
UserModel.query().insert({name: "Jane", email: "jane@x.io"})
UserModel.query().insertAndFetch({name: "Jane", email: "jane@x.io"})  // full row back (any DB)
UserModel.query().insert({name: "Jane"}).returning("*")               // full row back (Postgres)

// update -- patch returns the number of affected rows
UserModel.query().patch({name: "Janet"}).where("id", 1)
UserModel.query().patchAndFetchById(1, {name: "Janet"})

// delete
UserModel.query().deleteById(1)
```

<Note>
    `BaseModel.query()` applies the soft-delete scope and fills timestamps
    automatically -- see [Soft Deletes](/v0.6/guides/database/soft-deletes).
</Note>

## Nested writes

Write an object graph in one call. `insertGraph` inserts a model and its related
rows. `upsertGraph` syncs a graph by the presence of `id`: rows with an `id` are
updated, rows without are inserted, and existing related rows **missing from the
graph are deleted**.

```ts
// insert a user with two new posts
UserModel.query().insertGraph({
    name: "Jane", email: "jane@x.io",
    posts: [
        {
            title: "First"
        },
        {
            title: "Second"
        }
    ]
})

// sync a graph (add *AndFetch to get full rows back)
UserModel.query().upsertGraph({
    id: 1, name: "Janet",
    posts: [
        {id: 10, title: "Updated"},   // has id  -> updated
        {title: "Brand new"}          // no id   -> inserted

        // any other post linked to user 1 -> deleted
    ]
})
```

<Note>
    `upsertGraph` deletion is not recursive unless the database enforces
    `ON DELETE CASCADE`.
</Note>

## Lifecycle hooks

Objection calls instance hooks around writes. `BaseModel` uses them internally
for timestamps and soft deletes, so overrides **must** call `super` first or
that behavior breaks. Available hooks: `$beforeInsert`, `$afterInsert`,
`$beforeUpdate`, `$afterUpdate`, `$beforeDelete`, `$afterDelete`, `$afterFind`.

```ts app/models/UserModel.ts
async $beforeInsert(queryContext) {
    await super.$beforeInsert(queryContext);    // keep automatic timestamps working

    this.email = this.email.toLowerCase();
}

async $beforeUpdate(opt, queryContext) {
    await super.$beforeUpdate(opt, queryContext);
}
```

<Note>
    Starting a query inside a hook? Pass `queryContext.transaction` as its
    connection so it joins the parent transaction.
</Note>

## Reusable query modifiers

Named query fragments live in a static `modifiers` getter and are applied with
`.modify()` -- including inside relation expressions (`"posts(published)"` above).

```ts app/models/UserModel.ts
static get modifiers() {
    return {
        active: (builder) => builder.where("is_active", true),
        byName: (builder, name) => builder.where("name", name)
    };
}
```

```ts
UserModel.query().modify("active")            // apply directly
UserModel.query().modify("byName", "Jane")    // with arguments
```

## Transactions

`Model.transaction` groups writes; pass `trx` to every query that takes part.
Any throw rolls the whole transaction back.

```ts
import BaseModel from "@bejibun/core/bases/BaseModel";
import UserModel from "@/app/models/UserModel";

await BaseModel.transaction(async (trx) => {
    const user = await UserModel.query(trx)
        .insert({
            name: "Jane",
            email: "jane@x.io"
        });

    await user.$relatedQuery("posts", trx)
        .insert({
            title: "First post"
        });
});
```

<CardGroup cols={2}>
    <Card title="CRUD operations" icon="database">
        Walk through reading, creating, updating, and deleting records.
    </Card>
    <Card title="Soft deletes" icon="trash-can-arrow-up">
        Recover records with `deleted_at`-based soft deletion.
    </Card>
</CardGroup>
